GNOME Bugzilla – Bug 605571
Network history graph
Last modified: 2012-10-02 00:17:31 UTC
I have attached below three screenshots show exactly what the issue is. First, take a look at "Minimized.png". Look at the network history graph. You see a bump that is concave down(upward pump). Now take a look at the "Maximized_BAD.png". This screenshot was taken a few seconds later, and the window was now maximized. You see that the SCALE in Network history instead of just STRETCHING itself from 0.0 to 2.0, it GREW to 5.0. After the downward concavity (the upward bump) passes, the SCALE fixes itself - see "Maximized_OK.png" This behavior happens ONLY when there is un upward bump in the graph. When there is no such bump, then as soon as you maximize the window, the SCALE simply stretches. Expected behavior: When you maximize the window, the scale should not change; it should just stretch itself.
Created attachment 150471 [details] maximized_OK
Created attachment 150472 [details] maximized_BAD
Created attachment 150473 [details] minimized
[Adding missing "QA Contact" entry so system monitor bug report changes can still be watched via the "Users to watch" list on https://bugzilla.gnome.org/userprefs.cgi?tab=email when the assignee is changed to an individual.]
This problem has been fixed in our software repository. The fix will go into the next software release. Thank you for your bug report.