Do not change the scale on resize, only stretch it. https://bugzilla.gnome.org/show_bug.cgi?id=605571